# docker-ckan-ed

./: .dev.env  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements-noh.txt
ckan/: Dockerfile.dev  activate_this.py  apache.wsgi  dev-requirements.txt  freeze-requirements.sh  parse-poetry-lock.py  pip-freeze.txt  private.pem  public.crt  requirements-dev.txt  requirements-freeze.txt  requirements-noh.txt  requirements.txt  update-requirements.sh
ckan/2.9/: wsgi.py
ckan/2.9/setup/: prerun.py  start_ckan-py2.sh  start_ckan.sh  start_ckan_development.sh  supervisor.worker.conf
ckan/2.9/setup/patches/ckan/: fix_improper_params.patch  fix_resource_uploader.patch  search_index_date_error.patch  search_query_ignore_case.patch  select2_508sr.patch  translation_encoding_fix.patch  user_create_pass_id.patch
ckan/crontabs/: ckan
ckan/docker-entrypoint.d/: 00-start-ckanext-ed.sh  01-start-ckanext-harvest.sh  02-start-ckanext-ga.sh  setup-harvest.sh
ckan/patches/ckan/: 1_datasets_per_page.patch  2_groups_per_page.patch  3_or_filters.patch  ckan_password_reset.patch  fix_checkbox.patch  fix_email_regexp.patch  fix_relationship_purge.patch  package_activity_list_extensions.patch  recaptcha.patch  resource_reorde.patch  resource_reorder.patch  test_config_options.patch
ckan/setup/: extra_scripts.sh  prerun.py  start_ckan_development.sh  supervisord.conf
ckan/setup/supervisord.d/: worker.conf
ckan/supervisor.d/: harvest.conf  httpd.conf  package_relationship_create.sh
datapusher/: Dockerfile
postgresql/: Dockerfile
requirements/: pyproject.toml
solr8/: ckan_init_solr.sh
