[tool.poetry]
name = "docker-ckan-ed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
alabaster = "0.7.12"
appdirs = "1.4.4"
Babel = "2.3.4"
"backports.functools-lru-cache" = "1.6.4"
"backports.os" = "0.1.1"
"backports.shutil_get_terminal_size" = "1.0.0"
Beaker = "1.9.0"
beautifulsoup4 = "4.5.1"
bleach = "2.1.3"
blinker = "1.4"
cachetools = "3.1.1"
certifi = "2020.6.20"
cffi = "1.14.5"
chardet = "3.0.4"
ckan-datapackage-tools = "0.1.0"
ckanapi = "4.5"
need = "^0.1"
to = "^0.3"
repo = "^0.1.0"
public = "^2020.12.3"
ckanext-sentry = {git = "https://github.com/okfn/ckanext-sentry.git", rev = "d3b1d1cf1f975b3672891012e6c75e176497db8f"}
ckantoolkit = "0.0.4"
click = "7.1.2"
contextlib2 = "0.6.0.post1"
coverage = "5.5"
coveralls = "1.11.1"
cryptography = "3.3.2"
decorator = "4.2.1"
Deprecated = "1.2.10"
docopt = "0.6.2"
docutils = "0.12"
enum34 = "1.1.10"
et-xmlfile = "1.0.1"
extras = "1.0.0"
factory-boy = "2.1.1"
fanstatic = "0.12"
first = "2.0.2"
fixtures = "3.0.0"
Flask = "0.12.4"
Flask-Babel = "0.11.2"
Flask-DebugToolbar = "0.10.1"
FormEncode = "1.3.1"
frictionless-ckan-mapper = "1.0.6"
fs = "2.4.11"
funcsigs = "1.0.2"
future = "0.18.2"
futures = "3.3.0"
gdata = "2.0.18"
gevent = "1.2.2"
google-api-core = "1.26.3"
google-api-python-client = "1.12.8"
google-auth = "1.30.0"
google-auth-httplib2 = "0.1.0"
googleapis-common-protos = "1.52.0"
greenlet = "0.4.13"
html5lib = "1.0.1"
httplib2 = "0.19.1"
idna = "2.10"
imagesize = "1.2.0"
ipaddress = "1.0.23"
ipdb = "0.13.7"
ipython = "5.10.0"
ipython_genutils = "0.2.0"
itsdangerous = "0.24"
jdcal = "1.4.1"
Jinja2 = "2.8"
jsonschema = "2.4.0"
LEPL = "5.1.3"
linecache2 = "1.0.0"
Mako = "1.0.7"
Markdown = "2.6.7"
MarkupSafe = "1.0"
metastore-lib = "0.2.0"
mock = "2.0.0"
mox3 = "0.28.0"
nose = "1.3.7"
oauth2client = "4.1.3"
ofs = "0.4.2"
openpyxl = "2.6.4"
packaging = "20.9"
Pairtree = "=0.7.1-T"
passlib = "1.6.5"
Paste = "1.7.5.1"
PasteDeploy = "1.5.2"
PasteScript = "2.0.2"
pathlib2 = "2.3.5"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pika = "0.9.8"
pip-tools = "1.7.0"
polib = "1.0.7"
prompt-toolkit = "1.0.18"
protobuf = "3.15.8"
psycopg2 = "2.7.3.2"
ptyprocess = "0.7.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.2.0"
pycparser = "2.20"
pyfakefs = "2.9"
PyGithub = "1.45"
Pygments = "2.2.0"
PyJWT = "1.7.1"
Pylons = "0.9.7"
pyOpenSSL = "20.0.1"
pyparsing = "2.4.7"
pysolr = "3.6.0"
python-dateutil = "2.8.1"
python-magic = "0.4.15"
python-mimeparse = "1.6.0"
python-slugify = "1.2.6"
pytz = "2020.1"
"pyutilib.component.core" = "4.6.4"
PyYAML = "5.4.1"
raven = "6.10.0"
redis = "2.10.1"
"repoze.lru" = "0.7"
"repoze.who" = "2.3"
"repoze.who-friendlyform" = "1.0.8"
requests = "2.24.0"
rfc3987 = "1.3.8"
Routes = "1.13"
rq = "0.6.0"
rsa = "4.0"
scandir = "1.10.0"
simplegeneric = "0.8.1"
simplejson = "3.10.0"
six = "1.15.0"
snowballstemmer = "2.1.0"
Sphinx = "1.7.1"
sphinx-rtd-theme = "0.3.1"
sphinxcontrib-websupport = "1.1.2"
SQLAlchemy = "1.1.11"
sqlparse = "0.2.2"
supervisor = "4.2.2"
Tempita = "0.5.2"
testtools = "2.4.0"
toml = "0.10.2"
traceback2 = "1.4.0"
traitlets = "4.3.3"
typing = "3.7.4.3"
typing-extensions = "3.7.4.3"
tzlocal = "1.3"
unicodecsv = "0.14.1"
Unidecode = "1.2.0"
unittest2 = "1.1.0"
uritemplate = "3.0.1"
urllib3 = "1.25.10"
vdm = "0.14"
wcwidth = "0.2.5"
webencodings = "0.5.1"
WebError = "0.13.1"
WebHelpers = "1.3"
WebOb = "1.0.8"
WebTest = "1.4.3"
Werkzeug = "0.14.1"
wrapt = "1.12.1"
xlrd = "2.0.1"
"zope.interface" = "4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
