[tool.poetry]
name = "docker-ckan-ed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

ckan = {git = "https://github.com/ckan/ckan.git", tag = "ckan-2.9.5"}

# Ckan Extensions
ckanext-envvars = {git = "https://github.com/okfn/ckanext-envvars.git", rev = "8602376a92a77b4f2d41763b6823d041469fa08e"}
ckanext-googleanalytics = {git = "https://github.com/datopian/ckanext-googleanalytics.git", rev = "d11e2efe453cfcc4e62509a67a0350a40aa1c253"}
ckanext-harvest = {git = "https://github.com/ckan/ckanext-harvest.git", tag = "v1.4.0"}
ckanext-showcase = {git = "https://github.com/ckan/ckanext-showcase.git", tag = "v1.5.0"}
ckanext-geoview = {git = "https://github.com/okfn/ckanext-geoview.git", tag = "lacounts-0.1"}
ckanext-pdfview = {git = "https://github.com/okfn/ckanext-pdfview.git", tag = "lacounts-0.1"}
ckanext-pages = {git = "https://github.com/ckan/ckanext-pages.git", tag = "v0.3.7"}
ckanext-xloader = {git = "https://github.com/ckan/ckanext-xloader.git", tag = "0.10.0"}

# CKAN core
alembic="1.7.6" # via -r requirements.in
babel= "2.9.1"
    # via
    #   -r requirements.in
    #   flask-babel
backports-zoneinfo="0.2.1"
    # via
    #   pytz-deprecation-shim
    #   tzlocal
beaker="1.11.0"
    # via -r requirements.in
bleach="4.1.0"
    # via -r requirements.in
blinker="1.4"
    # via -r requirements.in
certifi="2021.10.8"
    # via requests
charset-normalizer="2.0.12"
    # via requests
click="8.0.3"
    # via
    #   -r requirements.in
    #   flask
    #   rq
deprecated="1.2.13"
    # via redis
dominate="2.6.0"
    # via -r requirements.in
fanstatic="1.1" 
feedgen="0.9.0"
    # via -r requirements.in
flask="2.0.3"
    # via
    #   -r requirements.in
    #   flask-babel
    #   flask-multistatic
flask-babel="1.0.0"
    # via -r requirements.in
flask-multistatic="1.0"
    # via -r requirements.in
greenlet="1.1.2"
    # via sqlalchemy
idna="3.3"
    # via requests
importlib-metadata="4.11.3"
    # via
    #   alembic
    #   markdown
importlib-resources="5.4.0"
    # via alembic
itsdangerous="2.1.1"
    # via flask
jinja2="3.0.3"
    # via
    #   -r requirements.in
    #   flask
    #   flask-babel
lxml="4.8.0"
    # via feedgen
mako="1.2.0"
    # via alembic
markdown="3.3.6"
    # via -r requirements.in
markupsafe="2.1.1"
    # via
    #   jinja2
    #   mako
nose="1.3.7"
    # via pyutilib
packaging="21.3"
    # via
    #   bleach
    #   redis
passlib="1.7.4"
    # via -r requirements.in
polib="1.1.1"
    # via -r requirements.in
psycopg2="2.9.3"
    # via -r requirements.in
pyjwt="2.3.0"
    # via -r requirements.in
pyparsing="3.0.7"
    # via packaging
pysolr="3.9.0"
    # via -r requirements.in
python-dateutil="2.8.2"
    # via
    #   -r requirements.in
    #   feedgen
python-magic="0.4.25"
    # via -r requirements.in
pytz="2021.3"
    # via
    #   -r requirements.in
    #   babel
    #   flask-babel
pytz-deprecation-shim="0.1.0.post0"
    # via tzlocal
pyutilib="6.0.0"
    # via -r requirements.in
pyyaml="6.0"
    # via -r requirements.in
redis="4.1.4"
    # via rq
repoze-who="2.4.1"
    # via -r requirements.in
requests="2.27.1"
    # via
    #   -r requirements.in
    #   pysolr
routes="1.13"
rq="1.10.1"
    # via -r requirements.in
simplejson="3.17.6"
    # via -r requirements.in
six="1.16.0"
    # via
    #   bleach
    #   python-dateutil
    #   pyutilib
mypy="0.950"
    # via
    #   -r requirements.in
    #   alembic
sqlalchemy="1.3.5"
sqlparse="0.4.2"
    # via -r requirements.in
typing-extensions="4.1.1"
    # via -r requirements.in
tzdata="2022.1"
    # via pytz-deprecation-shim
tzlocal="4.1"
    # via -r requirements.in
unicodecsv="0.14.1"
urllib3="1.26.9"
    # via requests
watchdog="2.1.6"
    # via werkzeug
webassets="2.0"
    # via -r requirements.in
webencodings="0.5.1"
    # via bleach
webob="1.8.7"
    # via repoze-who
wrapt="1.14.0"
    # via deprecated
zipp="3.7.0"
    # via
    #   importlib-metadata
    #   importlib-resources
zope-interface="5.4.0"
    # via
    #   -r requirements.in
    #   repoze-who


# ckanext-datajson
# rfc3987 = "1.3.8"
# jsonschema = "2.4.0"
# LEPL = "5.1.3"

# ckanext-ed
# beautifulsoup4 = "4.5.1"
# ckantoolkit = "0.0.4"
# jdcal = "1.4.1"
# openpyxl = "2.6.4"
# xlrd = "2.0.1"

# ckanext-googleanalytics
gdata="2.0.18"
google-api-python-client="1.6.7"
pyOpenSSL="18.0.0"

# ckanext-harvest
ckantoolkit="0.0.7"
pika="1.2.1"

# ckanext-xloader
messytables="0.15.2"
unidecode="1.0.22"


[tool.poetry.dev-dependencies]
# CKAN core
beautifulsoup4="4.10.0"
cookiecutter="1.7.3"
coveralls="3.3.1"
docutils="0.17.1"
Faker="13.3.4"
factory-boy="3.2.1"
flask-debugtoolbar="0.13.1"
freezegun="1.2.1"
ipdb="0.13.9"
pip-tools="6.5.1"
Pillow="9.1.0"
responses="0.20.0"
sphinx-rtd-theme="1.0.0"
sqlalchemy-stubs="0.4"
sphinx="4.5.0"
towncrier="21.9.0"

pytest="7.1.1"
pytest-cov="3.0.0"
pytest-factoryboy="2.1.0"
pytest-freezegun="0.4.2"
pytest-rerunfailures="10.2"
pytest-split="0.7.0"

# Required in dev container
supervisor = "4.2.2"


[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
