[tool.poetry]
name = "docker-ckan-ed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"

ckan = {git = "https://github.com/ckan/ckan.git", tag = "ckan-2.9.5"}

# Ckan Extensions
ckanext-datajson = {git = "https://github.com/datopian/ckanext-datajson.git", branch = "dev/py3-upgrade"}
ckanext-deadoralive = {git = "https://github.com/datopian/ckanext-deadoralive.git", branch = "dev/python3"}
deadoralive = {git = "https://github.com/datopian/deadoralive.git", rev = "82eed6c73e17b9884476311a7a8fae9d2b379600"}
ckanext-envvars = {git = "https://github.com/okfn/ckanext-envvars.git", rev = "8602376a92a77b4f2d41763b6823d041469fa08e"}
ckanext-googleanalytics = {git = "https://github.com/datopian/ckanext-googleanalytics.git", branch = "ed-2.9"}
ckanext-harvest = {git = "https://github.com/ckan/ckanext-harvest.git", tag = "v1.4.0"}
ckanext-showcase = {git = "https://github.com/ckan/ckanext-showcase.git", tag = "v1.5.0"}
ckanext-pages = {git = "https://github.com/ckan/ckanext-pages.git", rev = "b9f7e49db5c036c602b1bff7050e91eccdc00b53"}
ckanext-xloader = {git = "https://github.com/ckan/ckanext-xloader.git", tag = "0.10.0"}

# CKAN core
alembic="1.0.0"
babel="2.7.0"
beaker="1.11.0"
bleach="3.1.4"
certifi="2021.5.30"
chardet="4.0.0"
click="7.1.2"
dominate="2.4.0"
fanstatic="1.1"
feedgen="0.9.0"
flask-babel="1.0.0"
flask-multistatic="1.0"
flask="1.1.1"
funcsigs="1.0.2"
idna="2.10"
itsdangerous="1.1.0"
jinja2="2.10.1"
lxml="4.6.3"
mako="1.1.5"
markdown="3.3.3"
markupsafe="1.1.1"
nose="1.3.7"
passlib="1.6.5"
polib="1.0.7"
psycopg2="2.8.2"
pyjwt="1.7.1"
pysolr="3.6.0"
python-dateutil="2.8.2"
python-editor="1.0.4"
python-magic="0.4.15"
pytz="2016.7"
pyutilib="5.7.1"
pyyaml="5.4.1"
redis="3.5.3"
"repoze.lru"="0.7"
"repoze.who"="2.3"
requests="2.25.1"
routes="1.13"
rq="1.0"
shutilwhich="1.1.0"
simplejson="3.10.0"
six="1.16.0"
sqlalchemy="1.3.5"
sqlparse="0.2.2"
tzlocal="1.3"
unicodecsv="0.14.1"
urllib3="1.26.6"
watchdog="2.1.5"
webassets="0.12.1"
webencodings="0.5.1"
webob="1.8.7"
werkzeug={extras = ["watchdog"], version = "1.0.0"}
"zope.interface"="4.7.2"


# ckanext-datajson
rfc3987 = "1.3.8"
jsonschema = "2.4.0"
LEPL = "5.1.3"

# ckanext-ed
# Newer versions of bs4 and ckantoolkit are installed elsewhere
# beautifulsoup4 = "4.5.1"
# ckantoolkit = "0.0.4"
jdcal = "1.4.1"
openpyxl = "2.6.4"
xlrd = "2.0.1"

# ckanext-googleanalytics
gdata="2.0.18"
google-api-python-client="1.6.7"
pyOpenSSL="18.0.0"

# ckanext-harvest
ckantoolkit="0.0.7"
pika="1.2.1"

# ckanext-xloader
messytables="0.15.2"
unidecode="1.0.22"


[tool.poetry.dev-dependencies]
# CKAN core
beautifulsoup4="4.10.0"
cookiecutter="2.1.1"
coveralls="3.3.1"
docutils="0.17.1"
Faker="13.3.4"
factory-boy="3.2.1"
flask-debugtoolbar="0.13.1"
freezegun="1.2.1"
ipdb="0.13.9"
pip-tools="6.5.1"
Pillow="9.1.0"
responses="0.20.0"
sphinx-rtd-theme="1.0.0"
sqlalchemy-stubs="0.4"
sphinx="4.5.0"
towncrier="21.9.0"

pytest="7.1.1"
pytest-cov="3.0.0"
pytest-factoryboy="2.1.0"
pytest-freezegun="0.4.2"
pytest-rerunfailures="10.2"
pytest-split="0.7.0"

# Required in dev container
supervisor = "4.2.2"


[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
